allows images back in

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # All Images #
 ##############
-/img/*
 
 # Compiled source #
 ###################
@@ -42,8 +41,8 @@ Thumbs.db
 
 ### Images ###
 # JPEG
-*.jpg
-*.jpeg
+#*.jpg
+#*.jpeg
 *.jpe
 *.jif
 *.jfif
@@ -69,10 +68,10 @@ Thumbs.db
 *.raw
 
 # Web P
-*.webp
+#*.webp
 
 # Portable Network Graphics
-*.png
+#*.png
 
 # Animated Portable Network Graphics
 *.apng
@@ -99,7 +98,7 @@ Thumbs.db
 *.dib
 
 # ICO
-*.ico
+#*.ico
 
 # 3D Images
 *.3dm
